; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/serqt_usb2/extr_serqt_usb2.c_BoxSetPrebufferLevel.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/serqt_usb2/extr_serqt_usb2.c_BoxSetPrebufferLevel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_serial = type { i32 }

@PREFUFF_LEVEL_CONSERVATIVE = common dso_local global i32 0, align 4
@QT_GET_SET_PREBUF_TRIG_LVL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_serial*)* @BoxSetPrebufferLevel to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @BoxSetPrebufferLevel(%struct.usb_serial* %0) #0 {
  %2 = alloca %struct.usb_serial*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.usb_serial* %0, %struct.usb_serial** %2, align 8
  %5 = load i32, i32* @PREFUFF_LEVEL_CONSERVATIVE, align 4
  store i32 %5, i32* %4, align 4
  %6 = load %struct.usb_serial*, %struct.usb_serial** %2, align 8
  %7 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.usb_serial*, %struct.usb_serial** %2, align 8
  %10 = getelementptr inbounds %struct.usb_serial, %struct.usb_serial* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @usb_sndctrlpipe(i32 %11, i32 0)
  %13 = load i32, i32* @QT_GET_SET_PREBUF_TRIG_LVL, align 4
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @usb_control_msg(i32 %8, i32 %12, i32 %13, i32 64, i32 %14, i32 0, i32* null, i32 0, i32 300)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @usb_control_msg(i32, i32, i32, i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @usb_sndctrlpipe(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
